fixed spacing on last list element in docCard page

--- a/src/theme/DocCard/styles.module.css
+++ b/src/theme/DocCard/styles.module.css
@@ -29,7 +29,6 @@
 
 li {
   color: black; /* bullet color */
-  margin-left: 20px;
 }
 li span {
   color: #489FE2; /* text color */
